add pulgin adn other method

--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "@tgsnake/step",
-  "version": "1.0.0",
-  "description": "Module determines steps for ",
+  "version": "3.0.0",
+  "description": "step module for tgsnake",
   "main": "index.js",
   "repository": "https://github.com/tgsnake/step",
   "license": "MIT",
   "dependencies": {
-    "@types/node": "^18.0.3",
     "tgsnake": "^2.0.0"
   }
 }
